feat(api-gateway): get reports list for client
