# api-gateway/src/swagger.json
@@ -43,6 +43,10 @@
       "description": "endpoints relating to clients"
     },
     {
+      "name": "Report",
+      "description": "endpoints relating to the running system reports"
+    },
+    {
       "name": "Role",
       "description": "endpoints relating to the user roles"
     },
@@ -1138,6 +1142,41 @@
                 }
               }
             }
+          },
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedError"
+          }
+        },
+        "x-codegen-request-body-name": "body"
+      }
+    },
+    "/Reports": {
+      "get": {
+        "tags": ["Report"],
+        "summary": "Get all the reports for a user",
+        "description": "Get all the reports for a user",
+        "operationId": "GetReports",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "All the reports for a user",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ReportSchema"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/BadRequest"
           },
           "401": {
             "$ref": "#/components/responses/UnauthorizedError"
@@ -2718,6 +2757,81 @@
           "updatedAt": {
             "type": "string",
             "format": "date-time"
+          }
+        }
+      },
+      "ReportSchema": {
+        "type": "object",
+        "properties": {
+          "reportId": {
+            "type": "string"
+          },
+          "reportName": {
+            "type": "string"
+          },
+          "procedureName": {
+            "type": "string"
+          },
+          "searchField": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "fieldName": {
+                  "type": "string"
+                },
+                "fieldType": {
+                  "type": "string"
+                },
+                "defaultValue": {
+                  "type": "string"
+                },
+                "options": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "label": {
+                        "type": "string"
+                      },
+                      "value": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                },
+                "mandatory": {
+                  "type": "boolean",
+                  "default": false
+                },
+                "visible": {
+                  "type": "boolean",
+                  "default": true
+                },
+                "hidden": {
+                  "type": "boolean",
+                  "default": false
+                }
+              }
+            }
+          },
+          "reportField": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "fieldName": {
+                  "type": "string"
+                },
+                "fieldType": {
+                  "type": "string"
+                },
+                "visible": {
+                  "type": "boolean",
+                  "default": true
+                }
+              }
+            }
           }
         }
       }
